# Fortran-Memory-Analyzer

./: CMakeLists.txt  README.md  build.sh  lapack_collector.py  lapack_validation_report.json  migration_advisor.py  test_validator.py  validation_report.json  validator.py
Documentation/: Evaluation.md
include/: common_block.hpp  equivalence_resolver.hpp  flang_runner.hpp  json_serializer.hpp  symbol_dump_parser.hpp
lapack_migration/: COMBLA_advice.txt  INFOC_advice.txt  SRNAMC_MOD.f90  SRNAMC_advice.txt
lapack_outputs/: BLAS__TESTING__cblat1.f.json  BLAS__TESTING__cblat2.f.json  BLAS__TESTING__cblat3.f.json  BLAS__TESTING__dblat1.f.json  BLAS__TESTING__dblat2.f.json  BLAS__TESTING__dblat3.f.json  BLAS__TESTING__sblat1.f.json  BLAS__TESTING__sblat2.f.json  BLAS__TESTING__sblat3.f.json  BLAS__TESTING__zblat1.f.json  BLAS__TESTING__zblat2.f.json  BLAS__TESTING__zblat3.f.json  CBLAS__testing__c_cblat1.f.json  CBLAS__testing__c_cblat2.f.json  CBLAS__testing__c_cblat3.f.json  CBLAS__testing__c_dblat1.f.json  CBLAS__testing__c_dblat2.f.json  CBLAS__testing__c_dblat3.f.json  CBLAS__testing__c_sblat1.f.json  CBLAS__testing__c_sblat2.f.json  CBLAS__testing__c_sblat3.f.json  CBLAS__testing__c_zblat1.f.json  CBLAS__testing__c_zblat2.f.json  CBLAS__testing__c_zblat3.f.json
migration_advice/: ALIGNTEST_MOD.f90  ALIGNTEST_advice.txt  BIGBLOCK_advice.txt  EQTEST_advice.txt  MATRICES_MOD.f90  MATRICES_advice.txt  MYDATA_MOD.f90  MYDATA_advice.txt  PERSIST_advice.txt  PHYSICS_CONST_MOD.f90  PHYSICS_CONST_advice.txt  PHYSICS_advice.txt  SIM_STATE_MOD.f90  SIM_STATE_advice.txt  STRINGS_MOD.f90  STRINGS_advice.txt  __BLANK_COMMON___MOD.f90  __BLANK_COMMON___advice.txt
outputs/: test01_file_a.json  test01_file_b.json  test02_size_mismatch_a.json  test02_size_mismatch_b.json  test03_type_punning_a.json  test03_type_punning_b.json  test04_alignment.json  test05_equivalence.json  test06_save_inconsistent_a.json  test06_save_inconsistent_b.json  test07_blank_common.json  test08_multidim.json  test09_character.json  test10_multiple_blocks.json
src/: batch_collect.cpp  collector.cpp
tests/fortran_samples/: test01_file_a.f90  test01_file_b.f90  test02_size_mismatch_a.f90  test02_size_mismatch_b.f90  test03_type_punning_a.f90  test03_type_punning_b.f90  test04_alignment.f90  test05_equivalence.f90  test06_save_inconsistent_a.f90  test06_save_inconsistent_b.f90  test07_blank_common.f90  test08_multidim.f90  test09_character.f90  test10_multiple_blocks.f90
